--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <title>Playlist zu WebM Konverter</title>
 </head>
 <body>
+<!--#include virtual="/partials/nav.html" -->
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+ <!--#include virtual="/partials/footer.html" -->
 </body>
 </html>
