--- a/index.html
+++ b/index.html
@@ -805,6 +805,7 @@
   </section>
 
   <!--#include virtual="/partials/footer.html" -->
+  <!--#include virtual="/partials/cookie-banner.html" -->
 
   <script>
     // Translations
