Include cookie banner in faq.html
Added inclusion of cookie banner partial to the FAQ page.

--- a/faq.html
+++ b/faq.html
@@ -484,6 +484,7 @@
   </section>
 
   <!--#include virtual="/partials/footer.html" -->
+  <!--#include virtual="/partials/cookie-banner.html" -->
 
   <script>
     // Translations
