--- a/funktion.html
+++ b/funktion.html
@@ -762,6 +762,7 @@
   </section>
 
   <!--#include virtual="/partials/footer.html" -->
+  <!--#include virtual="/partials/cookie-banner.html" -->
 
   <script>
     // Translations
